Add config option to reverse the spell switching scroll direction

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -703,6 +703,7 @@ config.ebwizardry.friendly_fire=Friendly Fire
 config.ebwizardry.telekinetic_disarmament=Telekinetic Disarmament
 config.ebwizardry.discovery_mode=Discovery Mode
 config.ebwizardry.enable_shift_scrolling=Enable Shift-scrolling
+config.ebwizardry.reverse_scroll_direction=Reverse Scroll Direction
 config.ebwizardry.minion_revenge_targeting=Minion Revenge Targeting
 config.ebwizardry.player_damage_scaling=Player Damage Scaling Factor
 config.ebwizardry.npc_damage_scaling=NPC Damage Scaling Factor
@@ -740,6 +741,7 @@ config.ebwizardry.friendly_fire.tooltip=Whether to allow players to damage their
 config.ebwizardry.telekinetic_disarmament.tooltip=Whether to allow players to disarm other players using the telekinesis spell. Set to false to prevent stealing of items.
 config.ebwizardry.discovery_mode.tooltip=For those who like a sense of mystery! When set to true, spells you haven't cast yet will be unreadable until you cast them (on a per-world basis). Has no effect when in creative mode. Spells of identification will be unobtainable in survival mode if this is false.
 config.ebwizardry.enable_shift_scrolling.tooltip=Whether you can switch between spells on a wand by scrolling with the mouse wheel while sneaking. Note that this will only affect you; other players connected to the same server obey their own settings.
+config.ebwizardry.reverse_scroll_direction.tooltip=Whether to reverse the scroll direction used to switch between spells on a wand while sneaking.
 config.ebwizardry.minion_revenge_targeting.tooltip=Whether summoned creatures can revenge attack their owner if their owner attacks them.
 config.ebwizardry.player_damage_scaling.tooltip=Global damage scaling factor for the damage dealt by players casting spells, relative to 1.
 config.ebwizardry.npc_damage_scaling.tooltip=Global damage scaling factor for the damage dealt by NPCs casting spells, relative to 1.
