--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -719,14 +719,14 @@ spell.ebwizardry\:arc.desc=Fires a spark of lightning at the target.
 spell.ebwizardry\:arcane_jammer.desc=Prevents the target from using magic for 15 seconds.
 spell.ebwizardry\:arcane_lock.desc=Creates an impenetrable barrier of force around a container, protecting it from being opened or destroyed. The caster and their allies may still open it, however.
 spell.ebwizardry\:arrow_rain.desc="Archers, fire!"
-spell.ebwizardry\:banish.desc=Teleports the target against its will to a random locations within a certain range.
+spell.ebwizardry\:banish.desc=Teleports the target against its will to a random location within a certain range.
 spell.ebwizardry\:black_hole.desc=Tear reality asunder.
 spell.ebwizardry\:blink.desc=Teleports the caster over a short distance to where they are pointing.
 spell.ebwizardry\:blizzard.desc=Creates a zone of swirling icy wind which slows and continually damages anything trapped inside. The caster is immune to the damage but is still slowed.
 spell.ebwizardry\:bubble.desc=Fires a jet of bubbles which causes anything it hits to float upwards helplessly. The target will fall after a certain time or if it is damaged.
 spell.ebwizardry\:chain_lightning.desc=Fires a spark of lightning at the target, which then chains to additional targets up to twice.
 spell.ebwizardry\:charge.desc=Causes the caster to charge rapidly in the direction they are looking, damaging and knocking back anything in their path.
-spell.ebwizardry\:clairvoyance.desc=Reveals the path to a remembered locations. With this spell selected, sneak-right-click on a block to set the locations. Cast this spell normally to reveal the path. The path will fade after 90 seconds.
+spell.ebwizardry\:clairvoyance.desc=Reveals the path to a remembered location. With this spell selected, sneak-right-click on a block to set the location. Cast this spell normally to reveal the path. The path will fade after 90 seconds.
 spell.ebwizardry\:cobwebs.desc=Creates cobwebs where you are pointing, which greatly hamper the movement of any creatures caught amongst them. The cobwebs will vanish after 20 seconds or if broken.
 spell.ebwizardry\:combustion_rune.desc=Places a magical landmine on the ground where you are pointing, which explodes when stepped upon.
 spell.ebwizardry\:conjure_armour.desc=Creates spectral armor around the caster which offers protection equal to that of iron armor. The armor lasts for 60 seconds. The caster must have an empty armor slot.
@@ -895,9 +895,9 @@ spell.ebwizardry\:transportation.undefined=You must remember the location of a s
 spell.ebwizardry\:transportation.wrongdimension=No remembered stone circle in this dimension...
 spell.ebwizardry\:clairvoyance.searching=Searching...
 spell.ebwizardry\:clairvoyance.confirm=The path revealed upon casting %1$s will now lead back to this point
-spell.ebwizardry\:clairvoyance.outofrange=Your remembered locations is too far away or inaccessible...
-spell.ebwizardry\:clairvoyance.undefined=You must remember a locations first!
-spell.ebwizardry\:clairvoyance.wrongdimension=Your remembered locations is in another dimension...
+spell.ebwizardry\:clairvoyance.outofrange=Your remembered location is too far away or inaccessible...
+spell.ebwizardry\:clairvoyance.undefined=You must remember a location first!
+spell.ebwizardry\:clairvoyance.wrongdimension=Your remembered location is in another dimension...
 spell.ebwizardry\:possession.insufficienthealth=You don't have enough health to possess %1$s!
 spell.ebwizardry\:possession.success=Press %s to stop possessing
 spell.ebwizardry\:divination.nothing=Nothing happened.
