--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -1117,6 +1117,8 @@ config.ebwizardry.creative_bypasses_arcane_lock.true=Anyone in creative mode
 config.ebwizardry.creative_bypasses_arcane_lock.false=Only ops in creative mode
 config.ebwizardry.slow_time_affects_players=Slow Time Affects Players
 config.ebwizardry.slow_time_affects_players.tooltip=Whether players are slowed when another nearby player uses the slow time spell. If this is disabled, mobs and projectiles will still be affected but players will move at normal speed.
+config.ebwizardry.bonemeal_grows_crystal_flowers=Bonemeal Grows Crystal Flowers
+config.ebwizardry.bonemeal_grows_crystal_flowers.tooltip=Whether using bonemeal on grass blocks has a chance to grow crystal flowers.
 config.ebwizardry.mob_loot_table_whitelist=Mob Loot Table Whitelist
 config.ebwizardry.mob_loot_table_whitelist.tooltip=Whitelist for loot tables to inject additional mob drops (as specified in loot_tables/entities/mob_additions.json) into. Wizardry makes a best guess as to which loot tables belong to hostile mobs, but this may not always be correct or appropriate; add loot table locations (not entity IDs) to this list to manually include them.
 config.ebwizardry.mob_loot_table_blacklist=Mob Loot Table Blacklist
