--- a/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
@@ -7,8 +7,30 @@ tile.ebwizardry:snare.name=Ловушка
 tile.ebwizardry:transportation_stone.name=Камень Транспортировки
 tile.ebwizardry:spectral_block.name=Спектральный Блок
 tile.ebwizardry:crystal_block.name=Кристальный Блок
+tile.ebwizardry:runestone.name=Рунический камень
+tile.ebwizardry:runestone_pedestal.name=Пьедестал рунического камня
+tile.ebwizardry:thorns.name=Колючки
+tile.ebwizardry:obsidian_crust.name=Обсидиановая кора
+tile.ebwizardry:dry_frosted_ice.name=Сухой матовый лед
 
-item.ebwizardry:magic_crystal.name=Магический Кристалл
+tile.ebwizardry:magic_crystal_block.name=Блок кристалла
+tile.ebwizardry:fire_crystal_block.name=Блок огненного кристалла
+tile.ebwizardry:ice_crystal_block.name=Блок ледяного кристалла
+tile.ebwizardry:lightning_crystal_block.name=Блок грозового кристалла
+tile.ebwizardry:necromancy_crystal_block.name=Блок темного кристалла
+tile.ebwizardry:earth_crystal_block.name=Блок зеленого кристалла
+tile.ebwizardry:sorcery_crystal_block.name=Блок мистического кристалла
+tile.ebwizardry:healing_crystal_block.name=Блок сияющего кристалла
+
+item.ebwizardry:crystal_magic.name=Магический Кристалл
+item.ebwizardry:crystal_fire.name=Огненный кристалл
+item.ebwizardry:crystal_ice.name=Ледяной кристалл
+item.ebwizardry:crystal_lightning.name=Грозовой кристалл
+item.ebwizardry:crystal_necromancy.name=Темный кристалл
+item.ebwizardry:crystal_earth.name=Зелёный кристалл
+item.ebwizardry:crystal_sorcery.name=Мистический кристалл
+item.ebwizardry:crystal_healing.name=Сияющий кристалл
+
 item.ebwizardry:magic_wand.name=Волшебный Жезл
 item.ebwizardry:apprentice_wand.name=Жезл Ученика
 item.ebwizardry:advanced_wand.name=Продвинутый Жезл
