--- a/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
+++ b/src/main/resources/assets/ebwizardry/lang/ru_ru.lang
@@ -184,6 +184,69 @@ item.ebwizardry:spectral_chestplate.name=Призрачный нагрудник
 item.ebwizardry:spectral_leggings.name=Призрачные поножи
 item.ebwizardry:spectral_boots.name=Призрачные ботинки
 
+item.ebwizardry:lightning_hammer.name=Молот Шторма
+
+item.ebwizardry:ring_condensing.name=Кольцо Конденсации
+item.ebwizardry:ring_condensing.desc=Медленно восстанавливает ману для всех жезлов на вашем хотбаре
+item.ebwizardry:ring_siphoning.name=Кольцо Сифонинга
+item.ebwizardry:ring_siphoning.desc=Увеличивает сифоновую ману на 30 %%
+item.ebwizardry:ring_battlemage.name=Кольцо Боевого Мага
+item.ebwizardry:ring_battlemage.desc=Держа палочку в руке и меч в основной руке, вы получаете 10 %% дополнительного магического урона
+item.ebwizardry:ring_combustion.name=Кольцо Горения
+item.ebwizardry:ring_combustion.desc=Существа, убитые огненными заклинаниями, взрываются
+item.ebwizardry:ring_fire_melee.name=Кольцо Огненного Прикосновения
+item.ebwizardry:ring_fire_melee.desc=Удар по существу огненной палочкой поджигает его
+item.ebwizardry:ring_fire_biome.name=Кольцо Пустынного Солнца
+item.ebwizardry:ring_fire_biome.desc=Огненные заклинания на 30% более сильны в горячих биомах
+item.ebwizardry:ring_disintegration.name=Кольцо Раскаленных Углей
+item.ebwizardry:ring_disintegration.desc=Все заклинания огненной атаки разрушают их жертв
+item.ebwizardry:ring_ice_melee.name=Кольцо Ледяного Прикосновения
+item.ebwizardry:ring_ice_melee.desc=Удар по существу ледяной палочкой дает эффект обморожения
+item.ebwizardry:ring_ice_biome.name=Кольцо Оледенения
+item.ebwizardry:ring_ice_biome.desc=Заклинания льда в снежных биомах на 30% более мощные
+item.ebwizardry:ring_arcane_frost.name=Кольцо Чародейского Мороза
+item.ebwizardry:ring_arcane_frost.desc=Существа, убитые ледяными заклинаниями, выпускают осколки льда во всех направлениях
+item.ebwizardry:ring_shattering.name=Кольцо Разрушителя
+item.ebwizardry:ring_shattering.desc=Атаки ближнего боя на мобов с эффектом обморожения могут разбить их на ледяные осколки
+item.ebwizardry:ring_lightning_melee.name=Кольцо Цепи
+item.ebwizardry:ring_lightning_melee.desc=Удар молнии о существо выстреливает молнией в другого находящегося поблизости существа
+item.ebwizardry:ring_storm.name=Кольцо Собирающейся Бури
+item.ebwizardry:ring_storm.desc=Во время грозы заклинания молнии резко сокращают время восстановления
+item.ebwizardry:ring_seeking.name=Кольцо Притяжения
+item.ebwizardry:ring_seeking.desc=Все снарядовые заклинания ищут свои цели
+item.ebwizardry:ring_hammer.name=Кольцо Талека Всемогущего
+item.ebwizardry:ring_hammer.desc=Молнии могут быть подняты и брошены
+item.ebwizardry:ring_soulbinding.name=Кольцо Странника Душ
+item.ebwizardry:ring_soulbinding.desc=Существа, поврежденные заклинаниями некромантии, становятся привязанными к вам
+item.ebwizardry:ring_leeching.name=Кольцо Пиявки
+item.ebwizardry:ring_leeching.desc=Все атаки некромантии с вероятностью 30% могут вызвать эффект истощения жизни
+item.ebwizardry:ring_necromancy_melee.name=Кольцо Некротического Прикосновения
+item.ebwizardry:ring_necromancy_melee.desc=Удар по существу с помощью палочки некромантии дает ему эффект увядания
+item.ebwizardry:ring_mind_control.name=Кольцо Экстрасенса
+item.ebwizardry:ring_mind_control.desc=Контролируемые разумом существа могут контролировать свои близлежащие существа
+item.ebwizardry:ring_poison.name=Кольцо Змеи
+item.ebwizardry:ring_poison.desc=Все заклинания земли отравляют свою цель
+item.ebwizardry:ring_earth_melee.name=Кольцо ядовитого прикосновения
+item.ebwizardry:ring_earth_melee.desc=Удар по существу земной палочкой отравляет его
+item.ebwizardry:ring_earth_biome.name=Кольцо Дриады
+item.ebwizardry:ring_earth_biome.desc=Заклинания земли сильнее на 30% в лесах и крытых лесах
+item.ebwizardry:ring_full_moon.name=Кольцо Воющего Волка
+item.ebwizardry:ring_full_moon.desc=Земные заклинания резко сократили время восстановления при полной луне
+item.ebwizardry:ring_extraction.name=Кольцо Извлечения
+item.ebwizardry:ring_extraction.desc=Убийства заклинаниями магии дают бонус маны
+item.ebwizardry:ring_mana_return.name=Кольцо Перфекциониста
+item.ebwizardry:ring_mana_return.desc=Силовые стрелы, которые не попадают в цель, возвращают ману, которую они использовали к вашей палочке
+item.ebwizardry:ring_blockwrangler.name=Кольцо Странника
+item.ebwizardry:ring_blockwrangler.desc=Брошенные блоки наносят в два раза больше обычного урона
+item.ebwizardry:ring_conjurer.name=Кольцо фокусника
+item.ebwizardry:ring_conjurer.desc=Колдовские вещи длятся в два раза дольше
+item.ebwizardry:ring_defender.name=Кольцо Защитника
+item.ebwizardry:ring_defender.desc=Ваши снаряды проходят через силовые поля, принадлежащие вам или союзнику
+item.ebwizardry:ring_paladin.name=Кольцо Паладина
+item.ebwizardry:ring_paladin.desc=Когда вы исцеляете себя или союзника, близлежащие союзники также получают немного здоровья
+item.ebwizardry:ring_interdiction.name=Кольцо Запрета
+item.ebwizardry:ring_interdiction.desc=Ваше силовое поле наносит урон существам, которые его касаются
+
 entity.ebwizardry:zombie_minion.name=Зомби
 entity.ebwizardry:skeleton_minion.name=Скелет
 entity.ebwizardry:spider_minion.name=Паук
