--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -1255,9 +1255,9 @@ config.ebwizardry.auto_place_obelisk_markers.tooltip=控制古式地图是否自
 config.ebwizardry.auto_place_shrine_markers=自动标记祭坛
 config.ebwizardry.auto_place_shrine_markers.tooltip=控制古式地图是否自动标记祭坛。
 integration.jei.category.ebwizardry\:arcane_workbench=奥术工作台
-integration.antiqueatlas.marker.ebwizardry\:wizard_tower=巫师塔
-integration.antiqueatlas.marker.ebwizardry\:obelisk=方碑
-integration.antiqueatlas.marker.ebwizardry\:shrine=祭坛
+integration.antiqueatlas.marker.ebwizardry.wizard_tower=巫师塔
+integration.antiqueatlas.marker.ebwizardry.obelisk=方碑
+integration.antiqueatlas.marker.ebwizardry.shrine=祭坛
 enchantment.ebwizardry\:magic_sword=魔力灌注
 enchantment.ebwizardry\:magic_bow=魔力灌注
 enchantment.ebwizardry\:flaming_weapon=火焰灌注
