手册进度→进度

--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -1218,7 +1218,7 @@ config.ebwizardry.reverse_scroll_direction.false=普通
 config.ebwizardry.spell_hud_skin=法术HUD皮肤
 config.ebwizardry.spell_hud_skin.tooltip=更改法术HUD的皮肤......
 config.ebwizardry.spell_hud_skin.preview=观看效果
-config.ebwizardry.handbook_progression=手册进度
+config.ebwizardry.handbook_progression=进度
 config.ebwizardry.handbook_progression.tooltip=打开时，为了让玩家循序渐进地体验游戏过程，巫师手册的一些部分会随着玩家进度而解锁。关闭时玩家则能一下子看到整本书。在创造模式下，玩家总能看到整本手册。
 config.ebwizardry.handbook_progression.true=开启——教教我，先生（日语）！
 config.ebwizardry.handbook_progression.false=关闭——天生天才，岂能被这种小把戏拖慢脚步？
