--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -35,7 +35,7 @@ item.ebwizardry\:crystal_healing.name=治愈水晶
 item.ebwizardry\:magic_wand.name=新手魔杖
 item.ebwizardry\:apprentice_wand.name=学徒魔杖
 item.ebwizardry\:advanced_wand.name=高级魔杖
-item.ebwizardry\:master_wand.name=大师魔杖
+item.ebwizardry\:master_wand.name=宗师魔杖
 item.ebwizardry\:spell_book.name=法术书
 item.ebwizardry\:spell_book.apply_to_wizard=将%1$s的法术%2$s替换成%3$s
 item.ebwizardry\:arcane_tome.name=奥法宝典
@@ -71,14 +71,14 @@ item.ebwizardry\:advanced_lightning_wand.name=『进阶』驯雷者魔杖
 item.ebwizardry\:advanced_necromancy_wand.name=『进阶』御冥者魔杖
 item.ebwizardry\:advanced_earth_wand.name=『进阶』滋生者魔杖
 item.ebwizardry\:advanced_sorcery_wand.name=『进阶』秘法师魔杖
-item.ebwizardry\:advanced_healing_wand.name=『进阶』医命者魔杖
-item.ebwizardry\:master_fire_wand.name=『大师』狱炎业火之杖
-item.ebwizardry\:master_ice_wand.name=『大师』千秋冰封之杖
-item.ebwizardry\:master_lightning_wand.name=『大师』雷霆万钧之杖
-item.ebwizardry\:master_necromancy_wand.name=『大师』秽土唤灵之杖
-item.ebwizardry\:master_earth_wand.name=『大师』厚德载物之杖
-item.ebwizardry\:master_sorcery_wand.name=『大师』扭曲现实之杖
-item.ebwizardry\:master_healing_wand.name=『大师』妙手回春之杖
+item.ebwizardry\:advanced_healing_wand.name=『进阶』治疗师魔杖
+item.ebwizardry\:master_fire_wand.name=『宗师』狱炎业火之杖
+item.ebwizardry\:master_ice_wand.name=『宗师』千秋冰封之杖
+item.ebwizardry\:master_lightning_wand.name=『宗师』雷霆万钧之杖
+item.ebwizardry\:master_necromancy_wand.name=『宗师』秽土唤灵之杖
+item.ebwizardry\:master_earth_wand.name=『宗师』厚德载物之杖
+item.ebwizardry\:master_sorcery_wand.name=『宗师』扭曲现实之杖
+item.ebwizardry\:master_healing_wand.name=『宗师』妙手回春之杖
 item.ebwizardry\:spectral_sword.name=幽冥剑
 item.ebwizardry\:spectral_pickaxe.name=幽冥镐
 item.ebwizardry\:spectral_bow.name=幽冥弓
@@ -463,7 +463,7 @@ element.lightning.wizard=驯雷师
 element.necromancy.wizard=御冥师
 element.earth.wizard=滋生师
 element.sorcery.wizard=秘法师
-element.healing.wizard=医命师
+element.healing.wizard=治疗师
 spelltype.attack=攻击
 spelltype.defence=防御
 spelltype.utility=功能
@@ -772,7 +772,7 @@ spell.ebwizardry\:possession.desc="自相残杀吧。"
 spell.ebwizardry\:ray_of_purification.desc=射出一道强力且致命的光线，使目标失明。如果目标是亡灵生物，则会受到双重伤害且被点燃。
 spell.ebwizardry\:remove_curse.desc=移除当前影响施法者的任何诅咒。
 spell.ebwizardry\:replenish_hunger.desc=补充施法者4点饥饿值。
-spell.ebwizardry\:resurrection.desc=对真正强大的医者来说，死亡不是必选项。
+spell.ebwizardry\:resurrection.desc=如果有一名真正强大的治疗师在你旁边时,死亡将并不是必须的
 spell.ebwizardry\:ring_of_fire.desc=在施法者周围制造一个火圈，对周围的敌人造成伤害并将其点燃。
 spell.ebwizardry\:satiety.desc=补充施法者8点饥饿值。
 spell.ebwizardry\:shadow_ward.desc=在施法者面前支撑一面暗黑护盾，所受到伤害的一半都会返回到攻击者身上。
@@ -1083,7 +1083,7 @@ item.ebwizardry\:crystal_healing.name=辉光水晶
 item.ebwizardry\:magic_wand.name=魔杖
 item.ebwizardry\:apprentice_wand.name=学徒魔杖
 item.ebwizardry\:advanced_wand.name=进阶魔杖
-item.ebwizardry\:master_wand.name=大师魔杖
+item.ebwizardry\:master_wand.name=宗师魔杖
 item.ebwizardry\:spell_book.name=法术书
 item.ebwizardry\:spell_book.apply_to_wizard=将 %1$s 的法术 %2$s 替换为 %3$s
 item.ebwizardry\:arcane_tome.name=奥义之书
