--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -850,7 +850,7 @@ spell.ebwizardry\:resurrection.button_ready=复活
 forfeit.ebwizardry\:do_nothing=什么也没有发生。
 forfeit.ebwizardry\:burn_self=%s在你的手中迸发出火焰！
 forfeit.ebwizardry\:fireball=一个火球出现在你的前面！
-forfeit.ebwizardry\:firebomb=火焰炸弹出现在你的上方！
+forfeit.ebwizardry\:firebomb=燃烧弹出现在你的上方！
 forfeit.ebwizardry\:explode=突如其来的爆炸将你撞倒在地！
 forfeit.ebwizardry\:blazes=突然，敌对的烈焰人你周身显现！
 forfeit.ebwizardry\:burn_surroundings=你周围的区域被点燃了！
