--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -708,7 +708,7 @@ spell.ebwizardry\:forest_of_thorns.desc=密林幽深处，\n魔力亦如故。\n
 spell.ebwizardry\:freeze.desc=冰冻目标10秒，也能把水冻结或在地表造雪。
 spell.ebwizardry\:freezing_weapon.desc=暂时性的将冰霜的力量附加在快捷栏的第一件武器上，武器能使受害者冰冻，法术在45秒后失效。
 spell.ebwizardry\:frost_axe.desc=制造一把冰霜之斧，击中敌人时将其冻伤，冰霜之斧存在时间30秒。
-spell.ebwizardry\:frost_ray.desc=在你指的地方制造一股霜冻流，可将目标减慢并持续伤害。
+spell.ebwizardry\:frost_ray.desc=在你指向的地方射出一道冰霜射线,冰霜射线可将目标减速并造成伤害
 spell.ebwizardry\:frost_sigil.desc=在地表放置一个魔法冰封陷阱，触发陷阱的生物会被冻结并受到伤害。
 spell.ebwizardry\:frost_step.desc=在30秒内，施法者会冻结走过的水面。
 spell.ebwizardry\:grapple.desc=发射一条连接生物或方块的神奇藤蔓，长按右击可以将自己拉向方块或将生物拉向自己。
