--- a/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
+++ b/src/main/resources/assets/ebwizardry/lang/zh_cn.lang
@@ -89,7 +89,7 @@ item.ebwizardry\:master_fire_wand.name=『宗师』狱炎业火之杖
 item.ebwizardry\:master_ice_wand.name=『宗师』千秋冰封之杖
 item.ebwizardry\:master_lightning_wand.name=『宗师』雷霆万钧之杖
 item.ebwizardry\:master_necromancy_wand.name=『宗师』秽土唤灵之杖
-item.ebwizardry\:master_earth_wand.name=『宗师』厚德载物之杖
+item.ebwizardry\:master_earth_wand.name=『宗师』万物吹息之杖
 item.ebwizardry\:master_sorcery_wand.name=『宗师』扭曲现实之杖
 item.ebwizardry\:master_healing_wand.name=『宗师』妙手回春之杖
 
