Add bookshelf interface to arcane workbench Implements the main functionality: - Access bookshelves from within the workbench - Search by spell name, tier, element and type - Sort by tier, element or alphabetically, ascending or descending - Three-way shift-clicking support - Automatic return of books to bookshelves when wand is removed

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -524,6 +524,11 @@ container.ebwizardry\:arcane_workbench.apply=Apply
 container.ebwizardry\:arcane_workbench.mana=Mana\:
 container.ebwizardry\:arcane_workbench.upgrades=Applied Upgrades\:
 
+container.ebwizardry\:arcane_workbench.bookshelves=Bookshelves
+container.ebwizardry\:arcane_workbench.sort_tier=Sort by Tier
+container.ebwizardry\:arcane_workbench.sort_element=Sort by Element
+container.ebwizardry\:arcane_workbench.sort_alphabetical=Sort Alphabetically
+
 container.ebwizardry\:bookshelf=Bookshelf
 
 tier.novice=Novice
