Arcane workbench tooltip refactoring - Reorganises the huge amount of code in the draw background/foreground methods into a hierarchical object system - Makes the tooltip box change height to fit the content - Adds text wrapping support for items/spells with super long names - Adds proper format arguments to the mana readout translation - The tooltip now shows the new spells that will be applied with a flashing animation

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -529,9 +529,8 @@ gui.ebwizardry\:spell_book.mana_cost_undiscovered=Mana Cost: ?
 gui.ebwizardry\:lectern.title=Spell Lookup
 
 container.ebwizardry\:arcane_workbench=Arcane Workbench
-container.ebwizardry\:arcane_workbench.apply=Apply
-container.ebwizardry\:arcane_workbench.mana=Mana\:
-container.ebwizardry\:arcane_workbench.upgrades=Applied Upgrades\:
+container.ebwizardry\:arcane_workbench.mana=Mana\: %s/%s
+container.ebwizardry\:arcane_workbench.upgrades=Applied Upgrades
 
 container.ebwizardry\:arcane_workbench.bookshelves=Bookshelves
 container.ebwizardry\:arcane_workbench.sort_tier=Sort by Tier
